BUGFIX: Fixed the flickering that happened from the animation's 3Dtransform. Needed to not be 0.

--- a/app/assets/stylesheets/animations.scss
+++ b/app/assets/stylesheets/animations.scss
@@ -137,7 +137,7 @@
 
   25% {
     background: #FFF;
-    transform: scale3D(0, 0, 1);
+    transform: scale3D(0.01, 0.01, 1);
   }
 
   50% {
